fix spacing

--- a/src/ds-style-fix.scss
+++ b/src/ds-style-fix.scss
@@ -734,3 +734,12 @@ div.contact-button {
 .sponsor-row {
    padding-bottom:30px;
 }
+
+.funding-img {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  max-width:350px;
+  padding: 10px;
+}
